// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e > should correctly add custom counter 1`] = `
[
  "test_result/digital-ocean.svg",
  "test_result/download",
  "test_result/fatal-error-2.mp3",
  "test_result/gameloft.svg",
  "test_result/intel.svg",
  "test_result/intel.txt",
  "test_result/level2/digital-ocean.svg",
  "test_result/level2/level3/digital-ocean.svg",
  "test_result/level2/level3/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/level2/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/light-switch.mp3",
  "test_result/login.txt",
  "test_result/mattermost.svg",
  "test_result/mattermost__2.svg",
  "test_result/mouse-click-computer.txt",
  "test_result/notification-message-light-interface-sound-2.mp3",
  "test_result/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/test/gameloft.svg",
  "test_result/test/intel.txt",
  "test_result/test1",
]
`;

exports[`e2e > should correctly handle multiple run 1`] = `
[
  "test_result/digital-ocean.svg",
  "test_result/download",
  "test_result/fatal-error-2.mp3",
  "test_result/gameloft.svg",
  "test_result/intel.svg",
  "test_result/intel.txt",
  "test_result/level2/digital-ocean.svg",
  "test_result/level2/level3/digital-ocean.svg",
  "test_result/level2/level3/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/level2/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/light-switch.mp3",
  "test_result/login.txt",
  "test_result/mattermost (2).svg",
  "test_result/mattermost.svg",
  "test_result/mouse-click-computer.txt",
  "test_result/notification-message-light-interface-sound-2.mp3",
  "test_result/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/test/gameloft.svg",
  "test_result/test/intel.txt",
  "test_result/test1",
]
`;

exports[`e2e > should correctly transform filenames 1`] = `
[
  "test_result/level2/level3/prefix-audioblocks-pleasant-interface-alert-2-message-hint-ding-message-hint-ding_Ht4sRWUAvU_NWM-postfix.mp3",
  "test_result/level2/level3/prefix-digital-ocean-svgrepo-com (1)-postfix.svg",
  "test_result/level2/prefix-audioblocks-pleasant-interface-alert-2-message-hint-ding-message-hint-ding_Ht4sRWUAvU_NWM-postfix.mp3",
  "test_result/level2/prefix-digital-ocean-svgrepo-com (1)-postfix.svg",
  "test_result/prefix-audioblocks-fatal-error-2_SY8xTgf8ADU_NWM-postfix.mp3",
  "test_result/prefix-audioblocks-notification-message-light-interface-sound-2_SFIlEpWL0vU_NWM-postfix.mp3",
  "test_result/prefix-audioblocks-pleasant-interface-alert-2-message-hint-ding-message-hint-ding_Ht4sRWUAvU_NWM-postfix.mp3",
  "test_result/prefix-digital-ocean-svgrepo-com (1)-postfix.svg",
  "test_result/prefix-download-id4knLKYsV-1732567273343-postfix",
  "test_result/prefix-gameloft-postfix.svg",
  "test_result/prefix-intel (1)-postfix.txt",
  "test_result/prefix-intel_- logo-1000x660-postfix.svg",
  "test_result/prefix-light-switch_NWM-postfix.mp3",
  "test_result/prefix-login_Msd12dsRG3-postfix.txt",
  "test_result/prefix-mattermost-icon-svgrepo-com-postfix.svg",
  "test_result/prefix-mattermost-svgrepo-com-postfix.svg",
  "test_result/prefix-mouse-click-computer_Gkjr_nNu_NWM-postfix.txt",
  "test_result/prefix-test1-postfix",
  "test_result/test/prefix-gameloft-postfix.svg",
  "test_result/test/prefix-intel (1)-postfix.txt",
]
`;

exports[`e2e > should correctly transform filenames after removing patterns 1`] = `
[
  "test_result/level2/level3/prefix-digital-ocean-postfix.svg",
  "test_result/level2/level3/prefix-pleasant-interface-alert-2-message-hint-ding-message-hint-ding-postfix.mp3",
  "test_result/level2/prefix-digital-ocean-postfix.svg",
  "test_result/level2/prefix-pleasant-interface-alert-2-message-hint-ding-message-hint-ding-postfix.mp3",
  "test_result/prefix-digital-ocean-postfix.svg",
  "test_result/prefix-download-postfix",
  "test_result/prefix-fatal-error-2-postfix.mp3",
  "test_result/prefix-gameloft-postfix.svg",
  "test_result/prefix-intel-postfix.svg",
  "test_result/prefix-intel-postfix.txt",
  "test_result/prefix-light-switch-postfix.mp3",
  "test_result/prefix-login-postfix.txt",
  "test_result/prefix-mattermost-postfix (2).svg",
  "test_result/prefix-mattermost-postfix.svg",
  "test_result/prefix-mouse-click-computer-postfix.txt",
  "test_result/prefix-notification-message-light-interface-sound-2-postfix.mp3",
  "test_result/prefix-pleasant-interface-alert-2-message-hint-ding-message-hint-ding-postfix.mp3",
  "test_result/prefix-test1-postfix",
  "test_result/test/prefix-gameloft-postfix.svg",
  "test_result/test/prefix-intel-postfix.txt",
]
`;

exports[`e2e > should execute basic functionality 1`] = `
[
  "test_result/digital-ocean.svg",
  "test_result/download",
  "test_result/fatal-error-2.mp3",
  "test_result/gameloft.svg",
  "test_result/intel.svg",
  "test_result/intel.txt",
  "test_result/level2/digital-ocean.svg",
  "test_result/level2/level3/digital-ocean.svg",
  "test_result/level2/level3/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/level2/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/light-switch.mp3",
  "test_result/login.txt",
  "test_result/mattermost (2).svg",
  "test_result/mattermost.svg",
  "test_result/mouse-click-computer.txt",
  "test_result/notification-message-light-interface-sound-2.mp3",
  "test_result/pleasant-interface-alert-2-message-hint-ding-message-hint-ding.mp3",
  "test_result/test/gameloft.svg",
  "test_result/test/intel.txt",
  "test_result/test1",
]
`;
